--- a/root/Index.html
+++ b/root/Index.html
@@ -10,36 +10,7 @@
 </head>
 <body class="light-mode">
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
-  <div class="container-fluid">
-    <a class="navbar-brand fw-bold" href="#">My Dev</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="باز و بسته کردن منو">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="mainNavbar">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href=".">Fullstack</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#vs-section">محیط توسعه</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#backend-section">بک‌اند</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#database-section">دیتابیس</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#frontend-section">فرانت‌اند</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#others-section">نکات تکمیلی</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  </nav>
+  <div data-include="./src/html/navbar.html"></div>
 
 
   <button id="darkModeToggle" aria-pressed="false" aria-label="تغییر حالت روشن / تاریک">
@@ -539,6 +510,7 @@ public IActionResult MigrateDatabase()
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./src/js/sidebar.js"></script>
   <script src="./src/js/zoom.js"></script>
+  <script src="./src/js/partail.js"></script>
 
 
 </body>
